# fastapi-template

./: Makefile  README.md  pyproject.toml
apps/: main.py
apps/routers/: health.py
